addon data store configuration

--- a/k3s/config.yaml
+++ b/k3s/config.yaml
@@ -6,6 +6,8 @@ description: K3S add-on by Community Home Assistant Add-ons
 url: https://github.com/pedrol3001/addon-k3s
 codenotary: contact@pedrol.me
 init: false
+map:
+  - addon_config:rw
 arch:
   - aarch64
   - amd64
@@ -29,4 +31,12 @@ ports_description:
   51821/udp: Required only for Flannel Wireguard with IPv6
   5001/tcp: Required only for embedded distributed registry (Spegel)
 schema:
+  db_type: list(sqlite|postgresdb|mysqldb)
   log_level: list(trace|debug|info|notice|warning|error|fatal)?
+  db_name: str?
+  db_host: str?
+  db_port: port?
+  db_user: str?
+  db_password: str?
+options:
+  db_type: sqlite
