persist data dir

--- a/k3s/Dockerfile
+++ b/k3s/Dockerfile
@@ -17,6 +17,7 @@ ENV INSTALL_K3S_SKIP_START=true
 # hadolint ignore=DL3008
 RUN apt-get update \
     && apt-get install -y --no-install-recommends curl systemd \
+    && mkdir /config \
     && mkdir /config/data \
     && curl -sfL https://get.k3s.io | sh -s - --docker --data-dir="/config/data" \
     && rm -fr  \
