make token chnageable

--- a/k3s/config.yaml
+++ b/k3s/config.yaml
@@ -32,6 +32,7 @@ ports_description:
   5001/tcp: Required only for embedded distributed registry (Spegel)
 schema:
   db_type: list(sqlite|postgresdb|mysqldb)
+  k3s_token: str
   log_level: list(trace|debug|info|notice|warning|error|fatal)?
   db_name: str?
   db_host: str?
@@ -40,3 +41,4 @@ schema:
   db_password: str?
 options:
   db_type: sqlite
+  k3s_token: "CHANGEME"
