--- a/k3s/config.yaml
+++ b/k3s/config.yaml
@@ -6,6 +6,7 @@ description: K3S add-on by Community Home Assistant Add-ons
 url: https://github.com/pedrol3001/addon-k3s
 codenotary: contact@pedrol.me
 init: false
+privileged: [SYS_ADMIN]
 full_access: true
 map:
   - addon_config:rw
